CSS/home.css
*{
    margin:0px; 
    padding: 0px;
}

nav{
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center;
    font-size: 20px;
    color: white;
}

.nav-bar:hover{
    background:linear-gradient(to right, #FF886A, #FCF6CF);
    width: fit-content;
    height: fit-content;
    color: black;
}

.nav-bar{
    text-decoration: none;
    padding-left:5%;
    padding-right:5%; 
    color:white; 
}
#self-image-div{
    display: block;
    margin-top: 50px;
    align-items: center;
    margin-bottom: 20px;
}

#self-image{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width:300px;
    height:360px;
    align-items: center;
}

.main-body{
    text-align: center;
    color: white;
    background: linear-gradient(to left bottom, #0F0C29, #302B63);
}

#about-me-body{
    display: inline-block;
    margin-top: 20px;
    text-align: left;
    color: white; 
    background: linear-gradient(to right, #0F0C29, #302B63);

}

#about-me-desc{
    padding-bottom: 20px;
    margin:20px; 
    
    font-size: 20px; 
    opacity: 5;
}


.link-hover{
    color: white;
}
.link-hover:hover{
    background:linear-gradient(to right, #FF886A, #FCF6CF );
    color:black;
}

